--- a/deno.json
+++ b/deno.json
@@ -18,8 +18,8 @@
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.4",
     "react": "npm:react@^18.3.1",
     "react-dom": "npm:react-dom@^18.3.1",
+    "react-markdown": "https://esm.sh/react-markdown@9.0.3",
     "react-router-dom": "npm:react-router-dom",
-    "react-markdown": "npm:react-markdown",
     "vite": "npm:vite@^6.0.1"
   }
 }
